<resources>
    <string name="app_name">SVU</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string-array name="lstTheme">
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Pastel</item>
        <item>Green</item>
    </string-array>
    <string name="title_activity_manage_student">MainActivity</string>
    <string name="title_my_subjects">My Subjects</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_manage_admin">ManageAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search">Search</string>
    <string name="menu_student">Student</string>
    <string name="menu_dept">Dept</string>
    <string name="menu_subject">Subject</string>
    <string name="menu_teacher">Teacher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>