<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.iwb303.tab.MySubjects.MySubjectsFragment"
        android:label="@string/title_my_subjects"
        tools:layout="@layout/fragment_my_subjects" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.iwb303.tab.Register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.iwb303.tab.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>